--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -488,9 +488,9 @@ blockquote {
 
 #head-content {
 	position: relative;
-	background: url(../img/header_2022.png) 50% 0 no-repeat;
+	background: url(../img/header.png) 50% 0 no-repeat;
 	background-size: cover;
-	padding-top: 50.14%;/*49.091%;*/
+	padding-top: 60%;/*49.091%;*/
 	opacity: 1;
 	-webkit-transition: all 1500ms ease-out;
 	transition: all 1500ms ease-out;
@@ -501,7 +501,8 @@ blockquote {
 	opacity: 0.75;
 }
 
-#navi {
+#navi
+ {
 	position: absolute;
 	left: 0;
 	top: 0;
